--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "angular": "^1.5.7",
     "angular-material": "^1.0.9",
     "angular-route": "^1.5.7",
-    "angular-animate": "^1.5.7"
+    "angular-animate": "^1.5.7",
+    "papaparse": "^4.1.2"
   }
 }
