--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "npm": "3.10.5"
   },
   "scripts": {
+    "postinstall": "./node_modules/bower/bin/bower install",
     "start": "node server.js"
   },
   "author": "rjgarciam",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "bower": "^1.7.9",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.0.1",
     "mongoose": "^4.5.3",
